# wiki

./: CMakeLists.txt  LICENSE  Makefile  Printer.cpp  Printer.h  README.md  main.cpp
Card/: Card.cpp  Card.h  ChampCard.cpp  ChampCard.h
Deck/: BottomDeck.cpp  BottomDeck.h  Deck.cpp  Deck.h  TopDeck.cpp  TopDeck.h
Parser/: 6.7.json  6.8.json  HowToUseJson.txt  JsonParser.cpp  JsonParser.h  emptyCard.json  jsonParser.cpp  jsonParser.h
TManagers/: BottomTableManager.cpp  BottomTableManager.h  TopTableManager.cpp  TopTableManager.h
Tests/: ParserTest.cpp
champs/: MelB.txt  MelT.txt  Spirit Blossom AhriB.txt  Spirit Blossom AhriT.txt
champs/v6.7/: 6.7.txt  MelB.txt  MelT.txt  ThreshB.txt  ThreshT.txt
champs/v6.8/: 6.8.txt  Spirit Blossom AhriB.txt  Spirit Blossom EvelynnB.txt  Spirit Blossom TeemoB.txt
defs/: defsCards.h  defsDeck.h  defsInvalidItems.h  defsItems.h  defsUpgradeLevels.h
